# swcache

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: build.rs  main.rs
src/config/: config_file.rs  mod.rs
src/disclaimer/: beta.rs  logo.rs  mod.rs  system_info.rs
src/protobuf/: mod.rs  server.rs  server_test.rs
src/protobuf/proto/: ping.proto
src/runtime/: mod.rs  runtime.rs
src/utils/: clean_terminal.rs  logger.rs  mod.rs
