[package]
name = "swcache"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "1.3.0"
clearscreen = "3.0.0"
owo-colors = "4.1.0"
sysinfo = { version = "0.32.0", features = ["windows"] }
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
prost = "0.14.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.6"
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"


[build-dependencies]
tonic-build = "0.14.6"
